trunk/Archive/09ab7656a4d1507a365ee1de69edca3d-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In instantiation of 'struct is_constructible<B>':
main.cpp:23:36:   required from here
main.cpp:20:11: error: 'B::B()' is private
 class B { B() = delete; };
           ^
main.cpp:16:98: error: within this context
   template<typename T, typename... Args> struct is_constructible : integral_constant<bool, sizeof(decltype(T(declval<Args>()...)))> {};
                                                                                                  ^
main.cpp:16:98: error: use of deleted function 'B::B()'
main.cpp:20:11: error: declared here
 class B { B() = delete; };
           ^
main.cpp:23:1: error: static assertion failed: B
 static_assert(!is_constructible<B>(), "B");
 ^
